# scheduler-api

./: .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 20240512_init_schedules.sql
src/: app.rs  main.rs  settings.rs
src/config/: local.toml
tests/: handlers.rs  mock.rs
