[package]
name = "rust-scheduler-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
config = "0.14.0"
dotenv = "0.15.0"
axum = { version = "0.7.5", features = ["default"] }
axum-macros = "0.4.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
tower = "0.4.13"
hyper = "1.3.1"
http-body-util = "0.1.1"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tower-http = { version = "0.5.2", features = ["full"] }
base64 = "0.22.1"
testcontainers-modules = { version = "0.4.2", features = ["postgres"] }
testcontainers = "0.16.7"
axum-otel-metrics = "0.8.1"
metrics = "0.21.1"
tracing = "0.1.40"
cron = "0.12.1"
chrono = { version = "0.4.38", features = ["serde"] }
axum-tracing-opentelemetry = "0.18.1"
init-tracing-opentelemetry = { version = "0.18.1", features = [
    "logfmt",
    "otlp",
    "tracing_subscriber_ext",
] }
tracing-subscriber = "0.3.18"
